--- a/src/html/template_product.html
+++ b/src/html/template_product.html
@@ -40,7 +40,7 @@
                         </li>
                         <li ng-if="productIdObj.id === 'omniwall_cl'" class="product-download-btns waves-effect waves-light">
                             <!-- <a class="btn-floating btn-large amber darken-3" href="/pdf/{{ productIdObj.specPageLink2 }}" target="_blank"> -->
-                                <a class="btn-floating btn-large amber darken-3" href="/pdf/streamline_omniwall_cl_fusion.pdf" target="_blank"></a>
+                                <a class="btn-floating btn-large amber darken-3" href="/pdf/streamline_omniwall_cl_fusion.pdf" target="_blank">
                                 <i class="material-icons small">attach_file</i>
                             </a>
                             <p>Fusion CL Data Sheet</p>
